k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: test-app-service
  labels:
    app.kubernetes.io/name: test-app
    app.kubernetes.io/component: service
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: test-app
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
